---------------------------------------------------------------------------------------------------
Version: 3.5.7
Date: ????
  Changes:
    - Show entities as available from the start if they are placed by items whose recipes are available at start. (#145)
  Bugfixes:
    - Fixed labs not being shown as a placed result. (#145)
    - Fixed potential issues when recursively unlocking rocket launch products. (#144)
---------------------------------------------------------------------------------------------------
Version: 3.5.6
Date: 2023-08-21
  Bugfixes:
    - [Reverse factory] Fixed that recycling recipes would cause many items to incorrectly show as researched (#133)
---------------------------------------------------------------------------------------------------
Version: 3.5.5
Date: 2023-07-01
  Bugfixes:
    - Fixed a crash on load when a force is invalidated (#131)
---------------------------------------------------------------------------------------------------
Version: 3.5.4
Date: 2023-06-11
  Bugfixes:
    - Fixed a crash when calling `/rb-print-object` with no parameters (#128)
---------------------------------------------------------------------------------------------------
Version: 3.5.3
Date: 2023-04-29
  Bugfixes:
    - Fixed a crash when migrating from before version 3.0
    - Fixed that characters were not showing as being able to craft recipes
---------------------------------------------------------------------------------------------------
Version: 3.5.2
Date: 2023-01-16
  Optimizations:
    - Massively reduced save loading time with large numbers of modules or fluids (credit to Rseding)
---------------------------------------------------------------------------------------------------
Version: 3.5.1
Date: 2022-12-06
  Changes:
    - Updated to Factorio 1.1.74 and flib 0.12.0
      - Dictionary translations are performed 10x faster in singleplayer